package com.portal.dmtt.model;

public class DMTTPortalConfig {

    private String driver;
    private String theConnection;
    private String username;
    private String password;


    //setter and getter


    public String getDriver() {
        return driver;
    }

    public void setDriver(String driver) {
        this.driver = driver;
    }

    public String getTheConnection() {
        return theConnection;
    }

    public void setTheConnection(String theConnection) {
        this.theConnection = theConnection;
    }

    public String getUsername() {
        return username;
    }

    public void setUsername(String username) {
        this.username = username;
    }

    public String getPassword() {
        return password;
    }

    public void setPassword(String password) {
        this.password = password;
    }
}
