package com.portal.dmtt.repo;

import com.portal.dmtt.model.TaskReq;
import org.springframework.data.jpa.repository.JpaRepository;

public interface taskReqREPO extends JpaRepository<TaskReq,Long> {

    }
