package com.portal.dmtt.repo;

import com.portal.dmtt.model.TaskSchJob;
import org.springframework.data.jpa.repository.JpaRepository;

public interface taskSchJobREPO extends JpaRepository<TaskSchJob,Long> {


}
